[tool.poetry]
name = "lambda"
version = "0.1.0"
description = ""
authors = ["takat0-h0rikosh1 <takato.h0rikosh1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
boto3 = "^1.28.44"
botocore = "^1.31.44"
boxsdk = {extras = ["jwt"], version = "^3.9.0"}
pymysql = "^1.1.0"
xlsxwriter = "^3.1.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
